//
//  AccessibilityIdentifiers.swift
//  Shopping List
//
//  Created by Mohamed Farid on 29/05/2024.
//

import Foundation

enum AccessibilityIdentifiers {
    static let addItemView = "AddItemView"
    static let addItemButton = "AddItemButton"
    static let addItemNameTextField = "NameTextField"
    static let addItemDescriptionTextField = "DescriptionTextField"
    static let addItemQuantityStepper = "QuantityStepper"
    static let addItemSaveButton = "SaveButton"
    static let shoppingListSearchField = "ShoppingListSearchField"
}
